# bacteria

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
src/: Bacteria.cpp  Bacteria.h  Game.cpp  Game.h  config.h  main.cpp
